# iitp_python

./: .coverage  .flake8  README.md  noxfile.py  pyproject.toml  test.py
Radon_transform/: draft.ipynb  draw.py  image_processing.py  main.py  radon_transform.py  test_file.py
docs/: conf.py  index.rst  reference.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: license.rst.txt
src/Radon_transform/: __init__.py  draw.py  image_processing.py  main.py  radon_transform.py
tests/: test_file.py
