[tool.poetry]
name = "radon"
version = "0.1.0"
description = ""
authors = ["BezSemenMIPT <bezieiazychnyi.sm@phystech.edu>"]
readme = "README.md"
packages = [{include = 'Radon_transform', from='src'}]


[tool.poetry.dependencies]
python = "^3.10"
click = "^7.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pytest = "^8.2.0"
opencv-python = "^4.9.0.80"
scikit-image = "^0.23.2"
adrt = "^1.0.1"

[tool.poetry.scripts]
rad = "src.Radon_transform.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.10.0"
pytype = {version = "^2024.4.11", python = "3.9"}
typeguard = "^4.2.1"
flake8-annotations = "^3.1.0"
flake8-docstrings = "^1.7.0"
sphinx = "^7.3.7"
xdoctest = "^1.1.3"
sphinx-autodoc-typehints = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
